kubernetes/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8081 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: llm_backend
          http_filters:
          - name: envoy.filters.http.jwt_authn
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
              providers:
                auth0:
                  issuer: "https://dev-r742tubun7igvzc2.us.auth0.com/"
                  audiences: ["https://llm.api"]
                  remote_jwks:
                    http_uri:
                      uri: "https://dev-r742tubun7igvzc2.us.auth0.com/.well-known/jwks.json"
                      cluster: auth0
                      timeout: 5s
                    cache_duration:
                      seconds: 600
              rules:
              - match: { prefix: "/" }
                requires:
                  provider_name: auth0
          - name: envoy.filters.http.router

  clusters:
  - name: llm_backend
    connect_timeout: 0.5s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: llm_backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: host.docker.internal
                port_value: 8000

  - name: auth0
    connect_timeout: 0.5s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: auth0
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: dev-r742tubun7igvzc2.us.auth0.com
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext

admin:
  access_log_path: "/dev/null"
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }
